# rust-template

./: Cargo.toml  rust-toolchain.toml
.cargo/: config.toml
src/: main.rs
