[package]
name = "rust-template"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["."]

[workspace.dependencies]

[dependencies]
# Option
# mimalloc = { version = "0.1.43", default-features = false }

[profile.dev]
opt-level = 1 # 1级优化

[profile.dev.package."*"]
opt-level = 3 # 依赖3级优化

[profile.release]
codegen-units = 1
debug = false
lto = "fat"
opt-level = 3
panic = "abort"
strip = "symbols"
